internal/gatewayapi/testdata/backendtrafficpolicy-backend-target-tcp-basic.in.yaml
gateways:
- apiVersion: gateway.networking.k8s.io/v1
  kind: Gateway
  metadata:
    name: gateway-1
    namespace: default
  spec:
    gatewayClassName: envoy-gateway-class
    listeners:
    - name: tcp
      protocol: TCP
      port: 8163
      allowedRoutes:
        kinds:
        - kind: TCPRoute
          group: gateway.networking.k8s.io
tcpRoutes:
- apiVersion: gateway.networking.k8s.io/v1alpha2
  kind: TCPRoute
  metadata:
    namespace: default
    name: tcproute-1
  spec:
    parentRefs:
    - name: gateway-1
      sectionName: tcp
    rules:
    - backendRefs:
      - name: service-1
        port: 8163
backendTrafficPolicies:
- apiVersion: gateway.envoyproxy.io/v1alpha1
  kind: BackendTrafficPolicy
  metadata:
    namespace: default
    name: policy-for-service-1
  spec:
    targetRefs:
    - group: ""
      kind: Service
      name: service-1
    circuitBreaker:
      maxConnections: 100
    tcpKeepalive:
      probes: 3
